--- a/styles/style.css
+++ b/styles/style.css
@@ -226,7 +226,10 @@ h2 {
 	font-size: 1.8em;
 	padding-bottom: 0.5em;
 }
-
+#validate{
+	margin: 18px 0;
+  	color: #cc324b;
+}
 #count {
 	color: #f39c12;
 	font-weight: 700;
