--- a/styles/style.css
+++ b/styles/style.css
@@ -300,6 +300,7 @@ input:focus {
 
 ul.guessBox {
 	height: 80px;
+	width: 380px;
 	margin: 10px auto 0;
 	background: #11a8ab;
 	padding: 0.5em;
@@ -309,6 +310,7 @@ ul.guessBox {
 	border-bottom-right-radius: 4px;
 	color: #fff;
 	overflow: auto;
+	word-wrap: break-word;
 }
 ul.guessBox li {
 	display: inline;
